# all-slain-gui

./: .gitignore  README.md  build.bat  pyproject.toml  run.bat  version.rc
.github/workflows/: build.yml  lint.yml  pyinstaller.yml  release.yml
src/: allslain_patch.py  app.py  args.py  config.py  discord.py  functions.py  main.py  update.py
src/windows/: about.py  main.py  options.py  overlay.py  tray_icon.py
